# ai_learning

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.json
docs/: 1 - 配置环境.md  2 - 日常 uv 及 Git 操作流程.md  3 - prompt-创建知识模块目录.md  AI知识模块.drawio
docs/思维导图/: .$AI知识模块.drawio.bkp  AI知识模块.drawio
src/FastAPI/: 1 - 基础调用.py  2 - 路径参数.py  Constitution.md  FastAPI.apifox.json  README.md
src/FastAPI/2 - 路径参数/: 1 - 路径参数.py  2 - 带类型的路径参数.py  3 - 路径操作顺序为顺序执行.py  4 - 路径参数使用预定义枚举值.py  5 - 包含路径的路径参数.py
src/FastAPI/3 - 查询参数/: 1 - 查询参数.py  2 - 可选参数.py  3 - 查询参数类型转换.py  5 - 必需的查询参数.py
src/FastAPI/3 - 路径参数校验/: 2 - 数值范围校验.py
src/FastAPI/4 - 查询参数校验/: 1 - 验证参数类型.py  10 - 设置参数为弃用.py
src/FastAPI/4 - 请求体/: 1 - 请求体（POST请求）.py  2 - 请求体+路径参数.py  3 - 请求体+路径+查询参数.py
src/FastAPI/4 - 返回响应/: 1 - 无参数.py  2 - 带请求体.py  3 - 使用 response_model.py  5 - 敏感属性类继承自基础类-实现过滤.py
src/FastAPI/5 - 响应状态码/: 1 - 基本使用.py
src/FastAPI/5 - 查询参数和字符串验证/: 11 - 为参数设置自定义函数.py  2 - 使用Annotated更细致地约束.py  3 - 使用Annotated限制参数最大最小字符数.py  5 - 为参数添加默认值.py  6 - 设置参数为必须且默认值可为None.py  8 - 查询参数为一个列表-设置默认值.py  9 - 为请求参数设置元数据.py
src/FastAPI/6 - 请求文件/: 1 - 上传文件.py
src/Pydantic/: 2 - Pydantic与FastAPI集成使用.py  4 - Field用法.py  5 - 模型转换.py  6 - 模型嵌套.py  7 - 常见用法.py  README.md
src/langchain_langgraph_重构/tool_calls/: README.md
src/langchain_langgraph_重构/模型调用/: 1-最基础调用.py  2-消息列表.py
src/langchain学习重构/tool_calls/: ToolCalls.py
temp/: j1.json  p1.py  p2.py
wiki/langchain/: Runnable 的核心能力总览.md  retry 与 fallback 组合时，不建议给备用模型加重试.md
wiki/自然语言处理（NLP）/: 向量嵌入概念解释.md
wiki/软件工程/: 六边形架构 or DDD 思想.md
(+195 files in other folders)
