[project]
name = "langchain-learning-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "llama-index>=0.14.23",
    "llama-index-embeddings-dashscope>=0.5.0",
    "llama-index-llms-openai-like>=0.7.2",
    "openai>=2.38.0",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.50.0",
]
